Fixes for Chrome to recognize that buttons need letter spacing, too.

--- a/src/custom-elements/cps-button/cps-button.styles.css
+++ b/src/custom-elements/cps-button/cps-button.styles.css
@@ -177,3 +177,7 @@ button.phat {
 	height: 48px;
 	padding: 0 28px;
 }
+
+.buttonLetterSpacing {
+	letter-spacing: inherit;
+}
